--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript"
+  ],
+  "rules": {
+    "import/no-anonymous-default-export": [
+      "off"
+    ],
+    "react/display-name": [
+      "off"
+    ],
+    "react/no-unescaped-entities": [
+      "off"
+    ]
+  }
 }
