--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DB_USER=postgres
-DB_NAME=quiosco
+DB_NAME=fastfood
 DB_PASSWORD=123456
 
-DATABASE_URL="postgresql://postgres:123456@localhost:5432/quiosco?schema=public"
+DATABASE_URL="postgresql://postgres:123456@localhost:5432/fastfood?schema=public"
